Exercicio JPA com entidade DOG 08/08/2022 --> commit final

--- a/DogJPA/src/main/resources/templates/cadastroDog.html
+++ b/DogJPA/src/main/resources/templates/cadastroDog.html
@@ -21,13 +21,13 @@
 	
 	
 		<label for="idnome">Nome</label>
-		<input type="text" placeholder="Informe nome" name="nome">
+		<input type="text" placeholder="Informe nome" name="nome" required>
 		
 		<label for="idraca">Raça</label>
-		<input type="text" placeholder="Informe a raça do doguinho" name="raca">
+		<input type="text" placeholder="Informe a raça do doguinho" name="raca" required>
 		
 		<label for="ididade">Idade</label>
-		<input type="text" placeholder="Informe a idade do doguinho" name="idade">
+		<input type="text" placeholder="Informe a idade do doguinho" name="idade" required>
 		
 		
 		<button class="btn waves-effect light-blue">Salvar</button>
