--- a/DogJPA/src/main/resources/templates/consultaDog.html
+++ b/DogJPA/src/main/resources/templates/consultaDog.html
@@ -16,7 +16,7 @@
   </nav>
 <body>
 	<div class="container">
-	<h1>Consulta</h1>
+	<h4>Doguinhos disponiveis para adoção</h4>
 	<table>
 		<thead>
 			<tr>
